Completed the Snake Game on web in html, css, js.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snake Mania - Online Snake Ground Game</title>
+    <link rel="icon" type="image/png" href="/img/favicon.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="body">
+      <div id="scoreBox">Score: 0</div>
+      <div id="hiscoreBox">hiscore: 0</div>
       <div id="board"></div>
     </div>
   </body>
